Document EMP damage effect

--- a/src/content/h1/tags/damage_effect/page.yml
+++ b/src/content/h1/tags/damage_effect/page.yml
@@ -11,3 +11,5 @@ thanks:
     en: Checking multiplayer headshot flag and radii behaviour
   gbMichelle:
     en: Reverse engineering the damage formula
+  King Feraligatr:
+    en: Testing EMP effect on shields
