Convert all related commands sections into filtered tables

--- a/src/content/h1/tags/scenario_structure_bsp/lightmaps/page.yml
+++ b/src/content/h1/tags/scenario_structure_bsp/lightmaps/page.yml
@@ -3,7 +3,7 @@ title:
 img: lightmaps_example.jpg
 imgCaption:
   en: |
-    Timberland's BSP with just lightmaps visible.
+    Timberland's BSP with just lightmap shading visible.
 keywords:
   en:
     - lightmap
