--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "common-tags": "^1.8.0",
     "del": "^5.1.0",
+    "feather-icons": "^4.28.0",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
