--- a/build-config.json
+++ b/build-config.json
@@ -16,7 +16,7 @@
     "vendorAssets": [
       "./node_modules/feather-icons/dist/feather-sprite.svg",
       "./node_modules/highlight.js/styles/night-owl.css",
-      "./node_modules/highlight.js/styles/solarized-light.css",
+      "./node_modules/highlight.js/styles/github.css",
       "./node_modules/@(htm)/preact/standalone.umd.js",
       "./node_modules/@(minisearch)/dist/umd/index.js"
     ]
