Fix different spellings of people for acknowledgements; add particle limits to renderer page

--- a/src/content/h1/engine/ai/page.yml
+++ b/src/content/h1/engine/ai/page.yml
@@ -7,7 +7,7 @@ keywords:
 thanks:
   Chris Butcher:
     en: "Quotes in article \"The Artificial Intelligence of Halo 2\" and GDC 2002 slides in \"The Integration of AI and Level Design in Halo\""
-  Kornman00:
+  kornman00:
     en: Overview of AI pathfinding system
   gbMichelle:
     en: Discovering max pathfinding distance, following behaviour with firing positions
