--- a/src/content/h1/engine/renderer/page.yml
+++ b/src/content/h1/engine/renderer/page.yml
@@ -7,6 +7,6 @@ thanks:
   Jakey:
     en: Renderer regressions
   gbMichelle:
-    en: Researching how shadow maps work, extreme distance limits testing
+    en: Researching how shadow maps work, extreme distance and particle limits testing
   Conscars:
     en: Extreme distance limits testing
