--- a/src/content/h1/engine/scripting/page.yml
+++ b/src/content/h1/engine/scripting/page.yml
@@ -7,11 +7,11 @@ keywords:
     - hsc
     - bsl
 thanks:
-  Kornman00:
+  kornman00:
     en: Original Blam Scripting Language Bible, http://www.modacity.net/docs/bslbible/
   Mimickal:
     en: Additional background on scripting, edits for clarity and extra information
-  TehLag:
+  t3h lag:
     en: Additional script information (limits, types, functionality, etc...)
   Ifafudafi:
     en: Script limits information
