--- a/src/data/workflows/workflows.yml
+++ b/src/data/workflows/workflows.yml
@@ -122,7 +122,7 @@ workflowItems:
   OpenSauce:
     page: opensauce
     authors:
-      - Kornman
+      - kornman00
       - TheFieryScythe
       - ChokingVictim
   OS_Guerilla:
