Complete external tutorial index

--- a/src/content/h1/guides/page.yml
+++ b/src/content/h1/guides/page.yml
@@ -4,3 +4,6 @@ stub: true
 keywords:
   en:
     - tutorials
+thanks:
+  gbMichelle:
+    en: Gathering the list of external tutorials, originally on halocetutorials.tk
