Document map header structure

--- a/src/content/h1/map/page.yml
+++ b/src/content/h1/map/page.yml
@@ -13,6 +13,6 @@ thanks:
   gbMichelle:
     en: How maps are loaded into memory
   Kavawuvi:
-    en: Map base memory addresses
+    en: Map base memory addresses and file structure
   hellux:
     en: Testing and documenting tag space on Xbox
