--- a/src/data/structs/h1/tags/scenario.yml
+++ b/src/data/structs/h1/tags/scenario.yml
@@ -46,8 +46,6 @@ type_defs:
           en: >-
             The map is meant to be used for [singleplayer][map#singleplayer] and
             loaded with the `map_name` command. Cannot be played in multiplayer.
-            This also causes map compilers like Tool and invader to apply certain
-            [hardcoded tag patches][tool#hardcoded-tag-patches].
       - name: multiplayer
         comments:
           en: The map is meant for multiplayer and can be loaded with `sv_map`.
@@ -2092,8 +2090,9 @@ type_defs:
         type: ScenarioType
         comments:
           en: >-
-            Determines the type of map this scenario represents. This primarily
-            affects how the game
+            Determines the type of map this scenario represents. This also causes
+            map compilers like Tool and invader to apply certain
+            [hardcoded tag patches][tool#hardcoded-tag-patches].
       - name: flags
         type: ScenarioFlags
       - name: child_scenarios
