--- a/src/data/workflows/workflows.yml
+++ b/src/data/workflows/workflows.yml
@@ -101,6 +101,22 @@ workflowItems:
   Sapien:
     inherit: HEK
     page: sapien
+  H1A-EK:
+    page: h1a-ek
+    authors:
+      - Bungie
+      - 343 Industries
+      - Saber Interactive
+      - Gearbox
+  H1A-Tool:
+    inherit: H1A-EK
+    page: h1a-tool
+  H1A-Guerilla:
+    inherit: H1A-EK
+    page: h1a-guerilla
+  H1A-Sapien:
+    inherit: H1A-EK
+    page: h1a-sapien
   Lightmaps:
     page:  lightmaps
   Aether:
@@ -523,6 +539,7 @@ similarItems:
     - Gmax
   -
     - Guerilla
+    - H1A-Guerilla
     - OS_Guerilla
     - Mozzarilla
     - invader-edit-qt
@@ -693,6 +710,7 @@ workflows:
     to: h2/scenario_structure_bsp
   - using:
       - Tool
+      - H1A-Tool
       - OS_Tool
       - phantom_tool
     from: jms
@@ -720,6 +738,7 @@ workflows:
     edit: map
   - using:
       - Tool
+      - H1A-Tool
       - OS_Tool
       - invader-build
     from: scenario
@@ -734,6 +753,7 @@ workflows:
     edit: h1/scenario_structure_bsp
   - using:
       - Tool
+      - H1A-Tool
       - LM_Tool
       - Aether
       - Sapien
@@ -773,6 +793,7 @@ workflows:
   # scenario editing
   - using:
       - Sapien
+      - H1A-Sapien
       - OS_Sapien
     edit:
       - h1/scenario_structure_bsp
@@ -780,6 +801,7 @@ workflows:
   # general purpose tag editors
   - using:
       - Guerilla
+      - H1A-Guerilla
       - Mozzarilla
       - invader-edit-qt
       - OS_Guerilla
