`Steam` is a proper noun

--- a/src/content/h1/tools/h1a-ek/page.yml
+++ b/src/content/h1/tools/h1a-ek/page.yml
@@ -8,7 +8,7 @@ info:
   en: >
     * Release date: 9999
     
-    * The tools can be [downloaded through steam](https://store.steampowered.com/app/fake_steam_appid).
+    * The tools can be [downloaded through Steam](https://store.steampowered.com/app/fake_steam_appid).
     
 related:
   - /h1/tools/hek
