Copy over all HEK page content to H1A-EK.
Some images are not included.

--- a/src/content/h1/tools/h1a-ek/h1a-tool/page.yml
+++ b/src/content/h1/tools/h1a-ek/h1a-tool/page.yml
@@ -6,3 +6,12 @@ keywords:
     - radiosity
     - cli
 toolName: H1A-Tool
+thanks:
+  gbMichelle:
+    en: Hardcoded tag patch reversing
+  MosesOfEgypt:
+    en: Explanation of radiosity passes
+  General_101:
+    en: Documenting tool commands
+  Kavawuvi:
+    en: Warning about Tool only using marker from superhigh LOD
