--- a/src/content/h1/tools/h1a-ek/h1a-sapien/page.yml
+++ b/src/content/h1/tools/h1a-ek/h1a-sapien/page.yml
@@ -5,3 +5,20 @@ keywords:
   en:
     - scenario
 toolName: H1A-Sapien
+thanks:
+  General_101:
+    en: Additional Sapien hotkey documentation
+  The Cereal Killer:
+    en: Discovering Sapien keyboard shortcuts
+  kirby_422:
+    en: Describing baggage.txt file
+  Real Fake Doors:
+    en: Sharing NT Core knowledge
+  gruntfromhalo:
+    en: Discovering fog plane fix
+  Jakey:
+    en: 'Known issues, transparent self occlusion crash explanation'
+  GAIGHER:
+    en: Multi-core crash solution
+  InfernoPlus:
+    en: Sound gain crash solution
